--- a/package.json
+++ b/package.json
@@ -3,23 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
+  "module": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src/ -d lib/",
-    "prepublish": "yarn run build"
+    "lint": "eslint .",
+    "prettier": "prettier .",
+    "prepublish": "yarn run prettier && yarn run lint && yarn run build"
   },
-  "author": "",
+  "author": "Mike Marcacci",
   "license": "MIT",
+  "engines": {
+    "node": ">=8.5"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
-    "flow-bin": "^0.74.0",
     "prettier": "^1.13.5"
   }
 }
