--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src/ -d lib/",
     "lint": "eslint .",
-    "prettier": "prettier .",
-    "prepublish": "yarn run prettier && yarn run lint && yarn run build"
+    "prettier": "prettier **/*.{js,json,md} --write",
+    "prepublish": "yarn run lint && yarn run build"
   },
   "author": "Mike Marcacci",
   "license": "MIT",
