--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "fs-capacitor",
   "version": "0.0.1",
   "description": "",
-  "main": "lib/index.js",
-  "module": "src/index.js",
+  "main": "lib",
   "scripts": {
+    "clean": "rm -r lib; mkdir lib",
+    "build:mjs": "BABEL_ESM=1 babel src -d lib --keep-file-extension",
+    "build:js": "babel src -d lib",
+    "build": "npm-run-all -s clean -p build:*",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src/ -d lib/",
     "lint": "eslint .",
     "prettier": "prettier **/*.{js,json,md} --write",
     "prepublish": "yarn run lint && yarn run build"
@@ -17,13 +19,15 @@
     "node": ">=8.5"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.0.0-beta.49",
+    "@babel/core": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
     "babel-eslint": "^8.2.3",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-prettier": "^2.6.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.5"
   }
 }
