--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "prettier": "prettier **/*.{js,json,md} --write",
-    "prepublish": "yarn run lint && yarn run build"
+    "prepare": "yarn run lint && yarn run build"
   },
   "author": "Mike Marcacci",
   "license": "MIT",
