--- a/package.json
+++ b/package.json
@@ -1,33 +1,65 @@
 {
   "name": "fs-capacitor",
-  "version": "0.0.3",
+  "version": "1.0.0-alpha.1",
   "description": "",
-  "main": "lib",
-  "scripts": {
-    "clean": "rm -r lib; mkdir lib",
-    "build:mjs": "BABEL_ESM=1 babel src -d lib --keep-file-extension",
-    "build:js": "babel src -d lib",
-    "build": "npm-run-all -s clean -p build:*",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint .",
-    "prettier": "prettier **/*.{js,json,md} --write",
-    "prepare": "yarn run lint && yarn run build"
-  },
-  "author": "Mike Marcacci",
   "license": "MIT",
+  "author": {
+    "name": "Mike Marcacci",
+    "email": "mike.marcacci@gmail.com"
+  },
+  "repository": "github:mike-marcacci/fs-capacitor",
+  "homepage": "https://github.com/mike-marcacci/fs-capacitor#readme",
+  "bugs": "https://github.com/mike-marcacci/fs-capacitor/issues",
+  "keywords": [
+    "stream",
+    "buffer",
+    "file",
+    "split",
+    "clone"
+  ],
+  "files": [
+    "lib",
+    "!lib/test.*"
+  ],
+  "main": "lib",
+  "module": "lib/index.mjs",
   "engines": {
     "node": ">=8.5"
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.1",
+    "@babel/cli": "^7.0.0-beta.53",
+    "@babel/core": "^7.0.0-beta.53",
+    "@babel/preset-env": "^7.0.0-beta.53",
+    "babel-eslint": "^8.2.5",
+    "eslint": "^5.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "husky": "^0.14.3",
+    "leaked-handles": "^5.2.0",
+    "lint-staged": "^7.2.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.5"
+    "prettier": "^1.13.7",
+    "tap": "^12.0.1"
+  },
+  "scripts": {
+    "prepare": "FORCE_COLOR=1 npm-run-all prepare:clean -p prepare:mjs prepare:js -s prepare:prettier --aggregate-output",
+    "prepare:clean": "rm -rf lib",
+    "prepare:mjs": "BABEL_ESM=1 babel src -d lib --keep-file-extension",
+    "prepare:js": "babel src -d lib",
+    "prepare:prettier": "prettier 'lib/**/*.{mjs,js}' --write",
+    "test": "FORCE_COLOR=1 TAP_COLORS=1 run-p test:* -c --aggregate-output",
+    "test:eslint": "eslint . --ext mjs,js",
+    "test:prettier": "prettier '**/*.{json,md}' -l",
+    "test:mjs": "node --experimental-modules --no-warnings lib/test | tap-mocha-reporter spec",
+    "test:js": "node lib/test | tap-mocha-reporter spec",
+    "prepublishOnly": "run-s prepare test",
+    "watch": "watch 'npm run prepublishOnly --silent' src --interval 1",
+    "precommit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{mjs,js}": "eslint",
+    "*.{json,md}": "prettier -l"
   }
 }
