--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs-capacitor",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-beta.1",
   "description": "",
   "license": "MIT",
   "author": {
