--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.53",
-    "@babel/core": "^7.0.0-beta.53",
-    "@babel/preset-env": "^7.0.0-beta.53",
+    "@babel/cli": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/preset-env": "^7.0.0-rc.1",
     "babel-eslint": "^8.2.5",
-    "eslint": "^5.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
+    "eslint": "^5.4.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-prettier": "^2.6.2",
     "husky": "^0.14.3",
     "leaked-handles": "^5.2.0",
-    "lint-staged": "^7.2.0",
+    "lint-staged": "^7.2.2",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.13.7",
+    "prettier": "^1.14.2",
     "tap": "^12.0.1"
   },
   "scripts": {
