Update package scripts and config for the new husky version.

--- a/package.json
+++ b/package.json
@@ -54,8 +54,12 @@
     "test:mjs": "node --experimental-modules --no-warnings lib/test | tap-mocha-reporter spec",
     "test:js": "node lib/test | tap-mocha-reporter spec",
     "prepublishOnly": "run-s prepare test",
-    "watch": "watch 'npm run prepublishOnly --silent' src --interval 1",
-    "precommit": "lint-staged"
+    "watch": "watch 'npm run prepublishOnly --silent' src --interval 1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.{mjs,js}": "eslint",
