Add Prettier config.
- It is better to not hard-wrap in markdown and leave soft wrapping up to the editor.
- Having a Prettier config in the project enables auto-format for certain editor plugin configs.

--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
   "lint-staged": {
     "*.{mjs,js}": "eslint",
     "*.{json,md}": "prettier -l"
+  },
+  "prettier": {
+    "proseWrap": "never"
   }
 }
