--- a/package.json
+++ b/package.json
@@ -32,14 +32,15 @@
     "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.4.0",
-    "eslint-config-env": "^1.2.0",
+    "eslint-config-env": "^2.0.0",
     "eslint-config-prettier": "^3.0.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-import-order-alphabetical": "^0.0.1",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^1.1.2",
     "leaked-handles": "^5.2.0",
-    "lint-staged": "^7.2.2",
+    "lint-staged": "^8.1.0",
     "prettier": "^1.14.2",
     "tap": "^12.0.1"
   },
