--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "lib",
     "!lib/test.*"
   ],
-  "main": "lib/index.js",
-  "module": "src/index.mjs",
+  "main": "lib",
   "engines": {
     "node": ">=8.5"
   },
+  "browserslist": "node >= 8.5",
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.14.1",
     "eslint-config-env": "^5.0.0",
@@ -39,17 +39,23 @@
     "eslint-plugin-node": "^9.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^2.2.0",
+    "if-ver": "^1.1.0",
     "leaked-handles": "^5.2.0",
     "lint-staged": "^8.1.4",
     "prettier": "^1.16.4",
     "tap": "^13.1.2"
   },
   "scripts": {
-    "prepare": "rm -rf lib && babel src/index.mjs -d lib && prettier 'lib/**/*.js' --write",
-    "test": "npm run test:eslint && npm run test:prettier && npm run test:tap",
+    "prepare": "npm run prepare:clean && npm run prepare:mjs && npm run prepare:js && npm run prepare:prettier",
+    "prepare:clean": "rm -rf lib",
+    "prepare:mjs": "BABEL_ESM=1 babel src -d lib --keep-file-extension",
+    "prepare:js": "babel src -d lib",
+    "prepare:prettier": "prettier 'lib/**/*.{mjs,js}' --write",
+    "test": "npm run test:eslint && npm run test:prettier && npm run test:mjs && npm run test:js",
     "test:eslint": "eslint . --ext mjs,js",
     "test:prettier": "prettier '**/*.{json,yml,md}' -l",
-    "test:tap": "node --experimental-modules --no-warnings src/test | tap-mocha-reporter spec",
-    "prepublishOnly": "npm run prepare && npm test"
+    "test:mjs": "if-ver -lt 12 || exit 0; node --experimental-modules --no-warnings lib/test | tap-mocha-reporter classic",
+    "test:js": "node lib/test | tap-mocha-reporter classic",
+    "prepublishOnly": "npm test"
   }
 }
