--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "@babel/core": "^7.3.3",
     "@babel/preset-env": "^7.4.4",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.14.1",
-    "eslint-config-env": "^5.0.0",
-    "eslint-config-prettier": "^4.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-env": "^10.0.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-import-order-alphabetical": "^0.0.2",
-    "eslint-plugin-node": "^9.0.1",
+    "eslint-plugin-import-order-alphabetical": "^1.0.0",
+    "eslint-plugin-jsdoc": "^17.0.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^2.2.0",
+    "husky": "^3.0.9",
     "if-ver": "^1.1.0",
     "leaked-handles": "^5.2.0",
-    "lint-staged": "^8.1.4",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.16.4",
-    "tap": "^13.1.2"
+    "tap": "^14.9.1"
   },
   "scripts": {
     "prepare": "npm run prepare:clean && npm run prepare:mjs && npm run prepare:js && npm run prepare:prettier",
