--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,22 @@
 {
-  "extends": ["env"],
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "plugin:@typescript-eslint/recommended",
+    "prettier",
+    "prettier/@typescript-eslint"
+  ],
   "rules": {
-    "jsdoc/require-jsdoc": [0]
+    "@typescript-eslint/no-explicit-any": [0],
+    "@typescript-eslint/no-use-before-define": [0],
+    "@typescript-eslint/no-inferrable-types": [0],
+    "@typescript-eslint/array-type": [0],
+    "@typescript-eslint/explicit-function-return-type": [
+      1,
+      {
+        "allowExpressions": true,
+        "allowTypedFunctionExpressions": true
+      }
+    ]
   },
-  "settings": {
-    "node": {
-      "tryExtensions": [".mjs", ".js", ".json", ".node"]
-    }
-  }
+  "plugins": ["@typescript-eslint", "prettier"]
 }
