--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+*.sublime-workspace
 .DS_Store
-node_modules
-package-lock.json
-npm-debug.log
-yarn.lock
-yarn-error.log
-lib
+/dist
+/node_modules
+/npm-debug.log
+/package-lock.json
+/yarn-error.log
+/yarn.lock
