--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,3 +1,8 @@
 {
-  "proseWrap": "never"
+  "overrides": [
+    {
+      "files": ".ts",
+      "options": { "parser": "typescript" }
+    }
+  ]
 }
