--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fs-capacitor",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "Filesystem-buffered, passthrough stream that buffers indefinitely rather than propagate backpressure from downstream consumers.",
   "license": "MIT",
   "author": {
@@ -22,9 +22,9 @@
   ],
   "main": "dist/index.js",
   "engines": {
-    "node": ">=8.5"
+    "node": ">=10"
   },
-  "browserslist": "node >= 8.5",
+  "browserslist": "node >= 10",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
@@ -46,8 +46,5 @@
     "prepare": "yarn build",
     "prepublishOnly": "yarn install && yarn lint && yarn build && yarn test"
   },
-  "dependencies": {
-    "@types/readable-stream": "^2.3.5",
-    "readable-stream": "^3.4.0"
-  }
+  "dependencies": {}
 }
