--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,15 @@
   "compilerOptions": {
     "lib": ["es2018"],
     "target": "es2018",
-    "module": "commonjs",
+    "module": "es2020",
     "outDir": "./dist",
     "declaration": true,
     "declarationDir": "./dist",
+    "moduleResolution": "node",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
+    "skipLibCheck": false,
     "sourceMap": true
   },
   "include": ["./src/**/*"]
