--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        node: ["12", "14", "15"]
+        node: ["12", "14", "16", "17"]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
