clarify node version in engines
This uses the more strict interpretation of this field, adopting constraings for the development environment as well as the production one.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "main": "dist/index.js",
   "engines": {
-    "node": ">=12"
+    "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "browserslist": "node >= 12",
   "ava": {
